# imageviewer

./: CMakeLists.txt  main.cpp
inc/: autoscrollwidget.hpp
src/: autoscrollwidget.cpp  main.cpp
